--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,9 @@
 body {
     background-image: url(../style/avantlink-ribbon.svg );
-    height: 100%;
+    height: 100vh;
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
+     background-attachment: fixed;
     font-family: Roboto;
 }
