--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,8 @@ body {
     background-attachment: fixed;
     font-family: Roboto;
 }
+
+#affTable {
+    border-color: blue;
+    border-width: 3px;
+}
